--- a/src/components/graph/_graph.scss
+++ b/src/components/graph/_graph.scss
@@ -5,13 +5,24 @@
     background-color: #ffffff;
     border-radius: 4px;
     padding: 20px 30px;
+    box-shadow: 2px 2px 1px 2px rgb(207, 207, 207);
 
   .graph-header {
     margin-bottom: 5px;
     margin-left: 15px;
+    font-size: 32px;
   }
+
+  .graph-header .user-icon { 
+    margin-left: 5px;
+  }
+
   .graph-line {
     margin-left: 15px;
+    font-size: 14px;
 
+  }
+  .graph {
+    margin-top: 10px;
   }
 }
