--- a/src/components/header/_header.scss
+++ b/src/components/header/_header.scss
@@ -14,10 +14,11 @@
         align-items: center;
         background-color: #ffffff;
         padding: 0;
-        border-radius: 4px;
+        border-radius: 6px;
+        box-shadow: 0px 1px 1px 1px rgb(207, 207, 207);
     }
     .days-list-item {
-        padding: 6px;
+        padding: 8px;
         button {
           @include button-styles;
         }
