--- a/src/index.css
+++ b/src/index.css
@@ -11,10 +11,11 @@
   align-items: center;
   background-color: #ffffff;
   padding: 0;
-  border-radius: 4px;
+  border-radius: 6px;
+  box-shadow: 0px 1px 1px 1px rgb(207, 207, 207);
 }
 .header .days-list-item {
-  padding: 6px;
+  padding: 8px;
 }
 .header .days-list-item button {
   border: none;
@@ -32,11 +33,12 @@
 
 .insights-container {
   background-color: #ffffff;
-  margin: 30px 50px;
+  margin: 50px 50px;
   border-radius: 5px;
   display: flex;
   justify-content: space-between;
   font-family: monospace;
+  box-shadow: 2px 2px 1px 2px rgb(207, 207, 207);
 }
 .insights-container .insights-zooTools {
   margin: 30px 10px 40px 20px;
@@ -72,8 +74,7 @@
   margin-left: 15px;
 }
 .insights-container .recommendation {
-  margin-top: 30px;
-  margin-right: 70px;
+  margin: 30px auto;
 }
 .insights-container .recommendation-heading {
   margin-top: 90px;
@@ -92,7 +93,7 @@
   min-width: 40vw;
   padding: 20px 30px;
   border-radius: 4px;
-  box-shadow: 2px 2px 1px 1px grey;
+  box-shadow: 2px 2px 1px 2px rgb(207, 207, 207);
 }
 .info-container .info-header-section {
   display: flex;
@@ -113,7 +114,7 @@
   width: min-content;
 }
 .info-container .button-1 {
-  background-color: #e2e8f0;
+  font-weight: 600;
 }
 .info-container .button-2 {
   background-color: #ffffff;
@@ -139,6 +140,7 @@
   margin-left: 10px;
   z-index: 10;
   min-width: max-content;
+  font-size: 14px;
 }
 .info-container .data-list-item-img {
   z-index: 10;
@@ -146,6 +148,7 @@
 }
 .info-container .data-list-item-info {
   padding-right: 15px;
+  font-size: 14px;
 }
 .info-container .see-button {
   border: none;
@@ -156,6 +159,7 @@
   width: max-content;
   text-align: center;
   height: 28px;
+  font-weight: 600;
 }
 .info-container .user-table {
   margin: 25px 10px;
@@ -213,17 +217,26 @@
   background-color: #ffffff;
   border-radius: 4px;
   padding: 20px 30px;
+  box-shadow: 2px 2px 1px 2px rgb(207, 207, 207);
 }
 .graph-container .graph-header {
   margin-bottom: 5px;
   margin-left: 15px;
+  font-size: 32px;
+}
+.graph-container .graph-header .user-icon {
+  margin-left: 5px;
 }
 .graph-container .graph-line {
   margin-left: 15px;
+  font-size: 14px;
+}
+.graph-container .graph {
+  margin-top: 10px;
 }
 
 body {
-  background-color: #e5e7eb;
+  background-color: #f5f3ff;
 }
 
 /*# sourceMappingURL=index.css.map */
