--- a/src/components/insights/_insights.scss
+++ b/src/components/insights/_insights.scss
@@ -29,10 +29,11 @@
   }
   .summary-list-item {
     display: flex;
+    align-items: center;
     // justify-content: space-between;
   }
   .bulb {
-    background-color: red;
+    background-color: #fcd34d;
     border-radius: 2px;
     height: 28px;
     width: 27px;
